--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,9 +23,9 @@ if("${CMAKE_HOST_SYSTEM_NAME}" MATCHES "Darwin")
         set(CMAKE_OSX_DEPLOYMENT_TARGET "${MINVER}")
     endif()
     set(PROJECT_C_FLAGS "-arch ${ARCH} -fembed-bitcode=off -pthread -mrelax-all -Wno-deprecated-declarations -Wno-int-conversion")
-#    if(NOT "${CMAKE_BUILD_TYPE}" MATCHES "Debug")
-#        set(PROJECT_C_FLAGS "-flto=thin ${PROJECT_C_FLAGS}")
-#    endif()
+    if(NOT "${CMAKE_BUILD_TYPE}" MATCHES "Debug" AND NOT "${CMAKE_BUILD_TYPE}" MATCHES "RelWithDebInfo")
+        set(PROJECT_C_FLAGS "-flto=thin ${PROJECT_C_FLAGS}")
+    endif()
     set(PROJECT_CXX_FLAGS "${PROJECT_C_FLAGS}")
 elseif("${CMAKE_HOST_SYSTEM_NAME}" MATCHES "Linux")
     set(PROJECT_C_FLAGS "-arch ${ARCH} -Wl,--allow-multiple-definition -pthread -mrelax-all -Wno-deprecated-declarations -Wno-int-conversion")
@@ -85,9 +85,9 @@ add_subdirectory(external/tsschecker)
 add_subdirectory(external/idevicerestore)
 add_subdirectory(src)
 
-SET(CMAKE_EXPORT_COMPILE_COMMANDS 1)
-get_cmake_property(_variableNames VARIABLES)
-list (SORT _variableNames)
-foreach (_variableName ${_variableNames})
-    message(STATUS "${_variableName}=${${_variableName}}")
-endforeach()
+#SET(CMAKE_EXPORT_COMPILE_COMMANDS 1)
+#get_cmake_property(_variableNames VARIABLES)
+#list (SORT _variableNames)
+#foreach (_variableName ${_variableNames})
+#    message(STATUS "${_variableName}=${${_variableName}}")
+#endforeach()
