--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "idevicerestore"]
 	path = external/idevicerestore
 	url = https://github.com/futurerestore/idevicerestore.git
-	branch = dev
+	branch = mcg29_
 [submodule "tsschecker"]
 	path = external/tsschecker
 	url = https://github.com/1Conan/tsschecker.git
